# ChangeLog for virtual/jdk
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/jdk/ChangeLog,v 1.37 2011/09/08 07:33:39 caster Exp $

*jdk-1.7.0 (08 Sep 2011)

  08 Sep 2011; Vlastimil Babka <caster@gentoo.org> +jdk-1.7.0.ebuild:
  Bump for oracle-jdk-bin-1.7

  03 May 2011; Fabian Groffen <grobian@gentoo.org> jdk-1.6.0.ebuild:
  Marked ~x64-freebsd

  13 Feb 2011; Vlastimil Babka <caster@gentoo.org> jdk-1.6.0.ebuild:
  Reorganize the keyword-specific logic for better readability (and more
  verbosity). Add icedtea as a variant for ppc/ppc64

  14 Nov 2010; Vlastimil Babka <caster@gentoo.org> jdk-1.5.0.ebuild:
  Add gcj-jdk to 1.5 list.

  20 Jul 2010; Fabian Groffen <grobian@gentoo.org> jdk-1.5.0.ebuild:
  Marked ~sparc64-solaris

  04 Mar 2010; Vlastimil Babka <caster@gentoo.org> jdk-1.6.0.ebuild:
  Add icedtea-6 in the alternatives.

  22 Feb 2010; Vlastimil Babka <caster@gentoo.org> -jdk-1.4.1.ebuild,
  -jdk-1.4.2.ebuild:
  Removal of 1.4 per bug #287615.

  09 Feb 2010; Fabian Groffen <grobian@gentoo.org> jdk-1.5.0.ebuild,
  jdk-1.6.0.ebuild:
  Extend 'meaningful error message voodoo' to unbreak Prefix Linux and
  Solaris arches

  05 Feb 2010; Alexis Ballier <aballier@gentoo.org> jdk-1.5.0.ebuild:
  remove diablo-jdk-1.5 support as it is for freebsd6 only

  26 Jan 2010; Vlastimil Babka <caster@gentoo.org> jdk-1.5.0.ebuild,
  jdk-1.6.0.ebuild:
  Make dependencies on icedtea6-bin and sun-jdk apply only on x86/amd64 so
  that ppc(64) users get more meaningful error for masked licenses of
  ibm-jdk-bin, as pointed out in #287615.

  25 Jan 2010; Vlastimil Babka <caster@gentoo.org> jdk-1.4.2.ebuild,
  jdk-1.5.0.ebuild:
  Move apple-jdk-bin down in the list of variants so that the useful missing
  license error for sun-jdk is displayed instead of not-useful missing
  package error for apple-jdk-bin (which is in prefix overlay) - bug
  #302032.
