@@ -1,5 +1,5 @@
 EBUILD jdk-1.5.0.ebuild 1301 RMD160 16ce027f4cbe4f156a822cf1e4b928a90802aaea SHA1 5e90e0da64b90f9b6c2d3dfd2c954a29978d33d1 SHA256 f53d12e5f31d67fe450206aa077580719789e431a2d8266b919904d43a9ffe79
-EBUILD jdk-1.6.0.ebuild 1893 RMD160 0e540f10733b9997b11becc487951c47af26b818 SHA1 d3eb2b7ffa622c9408532563359dc4d4e3c155c4 SHA256 a62bc8cbc96173b2a724f50c9a8a1cd5bdf6c41732df9408c2f0f6f831939f5a
+EBUILD jdk-1.6.0.ebuild 1898 RMD160 8de640546fbbb4b6deb03552dbab43bd4409c7bf SHA1 8c603a5543e620cb2cdb499dc6c1176cc5b0e5c7 SHA256 dbb10f958c22f9b32bd16a7a308fdb380b8ee2675c6cbddc031fda016de6367d
 EBUILD jdk-1.7.0.ebuild 424 RMD160 cf70eeb0187107fb98743c7ae15d233d3afbdc53 SHA1 573616748da1c4b1af268e68386ccbf4aa27a116 SHA256 1a07838a115a24a6494e96070186ad64e879947a2579212476f7309081d769bc
-MISC ChangeLog 5150 RMD160 4d043da1c334699d6cc61a711842ed6fdca098d4 SHA1 f74b32e9906a46633fa45586398c05f39fa97341 SHA256 303949d7d95288d00bd02560ac0380beeb36fa433eee11e4147641edd5da2f89
+MISC ChangeLog 5264 RMD160 d89aa046d5bd9124fc38820d98f2668f3a495ee6 SHA1 904057becdcc851f109783f8a68ba9fbefa651ed SHA256 1ca2c35324e61875f8457d2cbe24d3828be2dd907945275886e23ec031ef3217
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
