@@ -1,6 +1,9 @@
 # ChangeLog for virtual/jdk
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/jdk/ChangeLog,v 1.37 2011/09/08 07:33:39 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/jdk/ChangeLog,v 1.38 2011/10/30 14:08:48 caster Exp $
+
+  30 Oct 2011; Vlastimil Babka <caster@gentoo.org> jdk-1.6.0.ebuild:
+  Package move icedtea6-bin to icedtea-bin.
 
 *jdk-1.7.0 (08 Sep 2011)
 
